--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "rollup": "^1.0.1",
     "rollup-plugin-babel": "^4.2.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.7.0",
     "unstated": "^2.1.1"
   }
